k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ibelieve-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Autenticação necessária"
spec:
  tls:
    - hosts:
        - api.ibeleve.com
        - zkp.ibeleve.com
      secretName: tls-secret
  rules:
    - host: api.ibeleve.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
    - host: zkp.ibeleve.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zkp
                port:
                  number: 80
